--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         body {
             font-family: 'Inter', sans-serif;
             background-color: #F9FAFB; /* stone-50 */
-            color: #374151; /* gray-700 */
+            color: #2596be; /* gray-700 */
         }
         .active-tab {
-            border-color: #3B82F6; /* blue-500 */
-            color: #3B82F6;
+            border-color: #2596be; /* blue-500 */
+            color: #2596be;
             background-color: #EFF6FF; /* blue-50 */
         }
         .tab-content {
@@ -339,3 +339,4 @@
 
 </body>
 </html>
+
