--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             color: #145369; /* gray-700 */
         }
         .active-tab {
-            border-color: #145369; /* petrol-500 */
+            border-color: #145369; /* green-500 */
             color: #145369;
-            background-color: #EFF6FF; /* petrol-50 */
+            background-color: #EFF6FF; /* green-50 */
         }
         .tab-content {
             display: none;
@@ -63,25 +63,25 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
             <!-- Countdown Section -->
-            <section id="countdown" class="bg-petrol-600 text-white rounded-lg p-8 mb-12 text-center shadow-lg">
+            <section id="countdown" class="bg-green-600 text-white rounded-lg p-8 mb-12 text-center shadow-lg">
                 <h2 class="text-2xl font-semibold mb-2">Prüfungstermin: 17. September 2025</h2>
-                <p class="text-petrol-200 mb-4">Verbleibende Zeit bis zur Abschlussprüfung Teil 1</p>
+                <p class="text-green-200 mb-4">Verbleibende Zeit bis zur Abschlussprüfung Teil 1</p>
                 <div id="timer" class="flex justify-center space-x-4 md:space-x-8 text-center">
                     <div>
                         <div id="days" class="text-4xl md:text-6xl font-bold">0</div>
-                        <div class="text-sm md:text-base text-petrol-200">Tage</div>
+                        <div class="text-sm md:text-base text-green-200">Tage</div>
                     </div>
                     <div>
                         <div id="hours" class="text-4xl md:text-6xl font-bold">0</div>
-                        <div class="text-sm md:text-base text-petrol-200">Stunden</div>
+                        <div class="text-sm md:text-base text-green-200">Stunden</div>
                     </div>
                     <div>
                         <div id="minutes" class="text-4xl md:text-6xl font-bold">0</div>
-                        <div class="text-sm md:text-base text-petrol-200">Minuten</div>
+                        <div class="text-sm md:text-base text-green-200">Minuten</div>
                     </div>
                     <div>
                         <div id="seconds" class="text-4xl md:text-6xl font-bold">0</div>
-                        <div class="text-sm md:text-base text-petrol-200">Sekunden</div>
+                        <div class="text-sm md:text-base text-green-200">Sekunden</div>
                     </div>
                 </div>
             </section>
@@ -99,19 +99,19 @@
                     </div>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <span class="text-4xl font-bold text-petrol-600">90</span>
+                            <span class="text-4xl font-bold text-green-600">90</span>
                             <p class="text-gray-600 mt-2">Minuten Prüfungszeit</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <span class="text-4xl font-bold text-petrol-600">20%</span>
+                            <span class="text-4xl font-bold text-green-600">20%</span>
                             <p class="text-gray-600 mt-2">der Gesamtnote</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                            <span class="text-4xl font-bold text-petrol-600">4</span>
+                            <span class="text-4xl font-bold text-green-600">4</span>
                             <p class="text-gray-600 mt-2">ungebundene Aufgaben</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                             <span class="text-2xl font-bold text-petrol-600 leading-tight">Identisch</span>
+                             <span class="text-2xl font-bold text-green-600 leading-tight">Identisch</span>
                             <p class="text-gray-600 mt-2">für alle IT-Berufe</p>
                         </div>
                     </div>
@@ -218,10 +218,10 @@
                     <div class="bg-white p-6 rounded-lg shadow-md">
                         <h3 class="text-xl font-semibold text-gray-800 mb-4">Top-Tipps für den Erfolg</h3>
                         <ul class="space-y-3 text-gray-600">
-                            <li class="flex items-start"><span class="text-petrol-500 font-bold mr-2">»</span><div><strong>Breites Wissen:</strong> Verstehen Sie viele Themen grundlegend, anstatt Experte in wenigen zu sein.</div></li>
-                            <li class="flex items-start"><span class="text-petrol font-bold mr-2">»</span><div><strong>Mit Altprüfungen arbeiten:</strong> Dies ist die effektivste Methode, um den Fragestil der IHK zu verinnerlichen.</div></li>
-                            <li class="flex items-start"><span class="text-petrol-500 font-bold mr-2">»</span><div><strong>Basics meistern:</strong> Grundrechenarten, Dreisatz und das Umrechnen von Einheiten sind sichere Punkte.</div></li>
-                            <li class="flex items-start"><span class="text-petrol-500 font-bold mr-2">»</span><div><strong>Niemals leer lassen:</strong> Schreiben Sie bei jeder Aufgabe etwas hin. Stichworte oder Lösungsansätze können Teilpunkte bringen.</div></li>
+                            <li class="flex items-start"><span class="text-green-500 font-bold mr-2">»</span><div><strong>Breites Wissen:</strong> Verstehen Sie viele Themen grundlegend, anstatt Experte in wenigen zu sein.</div></li>
+                            <li class="flex items-start"><span class="text-green font-bold mr-2">»</span><div><strong>Mit Altprüfungen arbeiten:</strong> Dies ist die effektivste Methode, um den Fragestil der IHK zu verinnerlichen.</div></li>
+                            <li class="flex items-start"><span class="text-green-500 font-bold mr-2">»</span><div><strong>Basics meistern:</strong> Grundrechenarten, Dreisatz und das Umrechnen von Einheiten sind sichere Punkte.</div></li>
+                            <li class="flex items-start"><span class="text-green-500 font-bold mr-2">»</span><div><strong>Niemals leer lassen:</strong> Schreiben Sie bei jeder Aufgabe etwas hin. Stichworte oder Lösungsansätze können Teilpunkte bringen.</div></li>
                         </ul>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                         label: 'Gewichtung in %',
                         data: [20, 80],
                         backgroundColor: [
-                            '#3B82F6', // petrol-500
+                            '#3B82F6', // green-500
                             '#D1D5DB'  // gray-300
                         ],
                         borderColor: '#FFFFFF',
@@ -339,5 +339,6 @@
 
 </body>
 </html>
+
 
 
